Something wrong with some tests

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,10 @@
+<!--templates/about.html-->
 {% extends 'base.html' %}
 
 {% block content %}
 
     <h1>
-        It is local books store, which conains same ibnformation about it.
+        It is local books store, which contains some information about it.
     </h1>
     <h3>
         Created by fantastic torment
